test/fail/internal/correct_dynaload_rewind.lly
#[
SyntaxError: Cannot anonymously call resulting type 'list[function (A)]'.
    from correct_dynaload_rewind.lly:6
]#

[print]("")
